@@ -1,5 +1,5 @@
 /*
- *  Copyright 2001-2005 Stephen Colebourne
+ *  Copyright 2001-2006 Stephen Colebourne
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -395,6 +395,7 @@ public class TestInstant_Basics extends TestCase {
         Instant test = new Instant(TEST_TIME1);
         DateTime result = test.toDateTime();
         assertEquals(TEST_TIME1, result.getMillis());
+        assertEquals(ISOChronology.getInstance(), result.getChronology());
     }
 
     public void testToDateTimeISO() {
@@ -403,7 +404,7 @@ public class TestInstant_Basics extends TestCase {
         assertSame(DateTime.class, result.getClass());
         assertSame(ISOChronology.class, result.getChronology().getClass());
         assertEquals(test.getMillis(), result.getMillis());
-        assertEquals(ISOChronology.getInstanceUTC(), result.getChronology());
+        assertEquals(ISOChronology.getInstance(), result.getChronology());
     }
 
     public void testToDateTime_DateTimeZone() {
@@ -443,7 +444,7 @@ public class TestInstant_Basics extends TestCase {
         Instant test = new Instant(TEST_TIME1);
         MutableDateTime result = test.toMutableDateTime();
         assertEquals(test.getMillis(), result.getMillis());
-        assertEquals(ISOChronology.getInstanceUTC(), result.getChronology());
+        assertEquals(ISOChronology.getInstance(), result.getChronology());
     }
 
     public void testToMutableDateTimeISO() {
@@ -452,7 +453,7 @@ public class TestInstant_Basics extends TestCase {
         assertSame(MutableDateTime.class, result.getClass());
         assertSame(ISOChronology.class, result.getChronology().getClass());
         assertEquals(test.getMillis(), result.getMillis());
-        assertEquals(ISOChronology.getInstanceUTC(), result.getChronology());
+        assertEquals(ISOChronology.getInstance(), result.getChronology());
     }
 
     public void testToMutableDateTime_DateTimeZone() {
